# split-signal

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
data/fixtures/: company_tickers_sample.json  companyfacts_sample.json  nasdaqlisted_sample.txt  otherlisted_sample.txt  sp500_sample.html
docs/: DATA_QUALITY.md  METHODOLOGY.md
docs/research/: backtest_results.md  event_study_results.md  horizon_decay.md  likelihood_validation.md  profile_backtest_results.md  split_outcomes.md
notebooks/: 06_event_study.py  07_backtest.py  08_profile_backtest.py  09_likelihood_model.py  10_validation.py  11_horizon_decay.py  12_split_outcomes.py
src/split_signal/: __init__.py  cli.py
src/split_signal/backtest/: __init__.py  controls.py  engine.py
src/split_signal/data/: __init__.py  cik.py  edgar.py  ingest.py  prices.py  quality.py  splits.py  universe.py
src/split_signal/features/: __init__.py  base.py  fundamental.py  price.py  structural.py  vector.py
src/split_signal/scoring/: __init__.py  likelihood.py  likelihood_v1.json  model.py  score.py
tasks/: plan.md  todo.md
tests/: test_backtest.py  test_cli.py  test_controls.py  test_edgar.py  test_features.py  test_prices.py  test_score.py  test_scoring.py  test_splits.py  test_universe.py  test_vector.py
