[project]
name = "split-signal"
version = "0.1.0"
description = "Research-backed stock split predictability index (personal decision-support; not financial advice)"
readme = "README.md"
license = "MIT"
authors = [{ name = "Jelbirt" }]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16",
    "yfinance>=0.2.40",
    "requests>=2.31",
    "lxml>=6.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "jupyterlab>=4",
    "matplotlib>=3.8",
]

[project.scripts]
split-signal = "split_signal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/split_signal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RET", "SLF"]
